--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "jut",
   "version": "0.0.0",
   "description": "codebase module search",
+  "preferGlobal": true,
+  "bin": {
+    "jut": "./bin/jut.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "node test/test.js"
@@ -25,6 +29,8 @@
     "falafel": "~0.3.1",
     "nopt": "~2.1.2",
     "through2": "~0.2.3",
-    "cssauron-falafel": "~1.2.0"
+    "cssauron-falafel": "~1.2.0",
+    "split": "~0.2.10",
+    "ls-stream": "~1.0.0"
   }
 }
