--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   "dependencies": {
     "falafel": "~0.3.1",
     "nopt": "~2.1.2",
-    "through2": "~0.2.3",
     "cssauron-falafel": "~1.2.0",
     "split": "~0.2.10",
+    "through": "~2.3.4",
+    "stream-police": "0.0.2",
     "ls-stream": "~1.0.0"
   }
 }
