--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "split": "~0.2.10",
     "through": "~2.3.4",
     "stream-police": "0.0.2",
-    "ls-stream": "~1.0.0"
+    "ls-stream": "~1.0.0",
+    "dotpath-stream": "0.0.0"
   }
 }
