--- a/package.json
+++ b/package.json
@@ -27,15 +27,14 @@
   "homepage": "https://github.com/jarofghosts/jut",
   "dependencies": {
     "bash-color": "0.0.3",
-    "cssauron-falafel": "1.2.0",
+    "detective": "^4.0.2",
     "dotpath-stream": "0.0.0",
-    "falafel": "0.3.1",
     "ls-stream": "1.0.0",
     "nopt": "2.1.2",
     "quotemeta": "0.0.0",
     "split": "0.2.10",
     "stream-police": "0.0.2",
-    "through": "2.3.4"
+    "through2": "^0.6.5"
   },
   "devDependencies": {
     "tape": "^3.0.3"
