--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "node test/index.js"
+    "test": "node test/index.js && npm run lint",
+    "lint": "standard index.js test/index.js bin/jut.js"
   },
   "repository": {
     "type": "git",
@@ -27,17 +28,22 @@
   "homepage": "https://github.com/jarofghosts/jut",
   "dependencies": {
     "bash-color": "0.0.3",
-    "detective": "^4.0.2",
-    "dotpath-stream": "0.0.0",
-    "ls-stream": "1.0.0",
-    "nopt": "2.1.2",
+    "detective": "^4.2.0",
+    "dotpath-stream": "^2.0.1",
+    "ls-stream": "^1.0.0",
+    "nopt": "^3.0.3",
     "quotemeta": "0.0.0",
-    "split": "0.2.10",
-    "stream-police": "0.0.2",
-    "through": "^2.3.8",
-    "through2": "^0.6.5"
+    "split": "^1.0.0",
+    "stream-police": "^1.0.0",
+    "through2": "^2.0.0"
   },
   "devDependencies": {
-    "tape": "^3.0.3"
+    "eslint": "^1.3.1",
+    "eslint-config-standard": "^4.3.1",
+    "eslint-config-standard-react": "^1.0.4",
+    "eslint-plugin-react": "^3.3.1",
+    "eslint-plugin-standard": "^1.3.0",
+    "standard": "^5.2.1",
+    "tape": "^4.2.0"
   }
 }
