--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "quotemeta": "0.0.0",
     "split": "^1.0.0",
     "stream-police": "^1.0.0",
+    "strum": "^2.0.1",
     "through2": "^2.0.0"
   },
   "devDependencies": {
